a working builder with download

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 main
 packer-plugin-kubevirt
 **/packer_log*.txt
-**/git_*test.pkr.hcl
+**/kubevirt_*test.pkr.hcl
+**/test-*-download.txt
+**/debug-key.crt
 crash.log
 
 dist/*
